Added Siema slider

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,3 +128,35 @@ body {
 .c3-chart-arc text {
     display: none;
 }
+.siemaChart{
+    width: 100vh;
+}
+.int-bullet ,
+.int-bullet::before
+{
+    transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+}
+
+.int-bullet {
+    height: 10px;
+    width: 10px;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    margin:0 auto;
+    transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+    display: inline-block;
+
+}
+.int-bullet::before {
+    background-color: #8d8d8d;
+    border-radius: 50%;
+    content: "";
+    height: 100%;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
